<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/sparks_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/sparks_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_to"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/the_sparks_foundation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sparks_logo"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/fblogin_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/fb_logo"
            android:gravity="center_horizontal|center_vertical"
            android:paddingHorizontal="5dp"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:text="Login with Facebook"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gmaillogin_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/gmail_background_button"
            android:drawableLeft="@drawable/search"
            android:gravity="center_horizontal|center_vertical"
            android:paddingHorizontal="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center_horizontal"
            android:text="@string/by_clicking_on_login_you_are_accepting_our_privacy_policy_nand_terms_amp_conditions"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/copyright"
            android:layout_gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/_2022_basudev_kar_for_the_sparks_foundation"
            android:textAllCaps="false"
            android:textSize="13sp" />
    </LinearLayout>
</RelativeLayout>